refactoring, formatting and cleaning from some dependencies