@@ -18,19 +18,16 @@ package com.igormaznitsa.mindmap.plugins.external;
 
 import com.igormaznitsa.commons.version.Version;
 import com.igormaznitsa.commons.version.VersionValidator;
-import com.igormaznitsa.meta.common.utils.GetUtils;
 import com.igormaznitsa.mindmap.model.logger.Logger;
 import com.igormaznitsa.mindmap.model.logger.LoggerFactory;
 import com.igormaznitsa.mindmap.plugins.MindMapPluginRegistry;
 import com.igormaznitsa.mindmap.plugins.api.MindMapPlugin;
 import java.io.File;
 import java.io.IOException;
-import java.security.AccessController;
-import java.security.PrivilegedAction;
 import java.util.Collection;
 import java.util.Locale;
-import javax.annotation.Nonnull;
-import javax.annotation.Nullable;
+import java.util.Objects;
+import java.util.function.Supplier;
 import org.apache.commons.io.FileUtils;
 
 public class ExternalPlugins {
@@ -40,37 +37,37 @@ public class ExternalPlugins {
   private final File pluginsFolder;
   private final VersionValidator pluginApiValidator;
 
-  public ExternalPlugins(@Nonnull final File pluginsFolder) {
+  public ExternalPlugins(final File pluginsFolder) {
     this.pluginApiValidator = new VersionValidator(">=" + MindMapPlugin.API);
     this.pluginsFolder = pluginsFolder;
     LOGGER.info("External plugins folder is " + pluginsFolder);
   }
 
   public void init() {
-    final Collection<File> plugins = FileUtils.listFiles(this.pluginsFolder, new String[] {PLUGIN_EXTENSION, PLUGIN_EXTENSION.toUpperCase(Locale.ENGLISH)}, false);
+    final Collection<File> plugins = FileUtils.listFiles(this.pluginsFolder,
+        new String[] {PLUGIN_EXTENSION, PLUGIN_EXTENSION.toUpperCase(Locale.ENGLISH)}, false);
     LOGGER.info("Detected " + plugins.size() + " plugin(s)");
     for (final File plugin : plugins) {
       try {
-        final PluginClassLoader loader = AccessController.doPrivileged(new PrivilegedAction<PluginClassLoader>() {
-          @Override
-          @Nullable
-          public PluginClassLoader run() {
-            PluginClassLoader result;
-            try {
-              result = new PluginClassLoader(plugin);
-            } catch (IOException ex) {
-              LOGGER.error("Can't create plugin class loader", ex);
-              result = null;
-            }
-            return result;
+        final Supplier<PluginClassLoader> loaderSupplier = () -> {
+          PluginClassLoader result;
+          try {
+            result = new PluginClassLoader(plugin);
+          } catch (IOException ex) {
+            LOGGER.error("Can't create plugin class loader", ex);
+            result = null;
           }
-        });
+          return result;
+        };
+
+        final PluginClassLoader loader = loaderSupplier.get();
 
         if (loader == null) {
           throw new IOException("Can't create plugin class loader, see log for stacktrace");
         }
 
-        final String pluginTitle = GetUtils.ensureNonNull(loader.getAttributes(Attribute.TITLE), "<unknown>");
+        final String pluginTitle =
+            Objects.requireNonNull(loader.getAttributes(Attribute.TITLE), "<unknown>");
         final Version pluginVersion = new Version(loader.getAttributes(Attribute.VERSION));
 
         LOGGER.info(String.format("Detected plugin %s [%s]", pluginTitle, pluginVersion));
@@ -80,11 +77,14 @@ public class ExternalPlugins {
           final String[] classes = loader.extractPluginClassNames();
           for (final String klazzName : classes) {
             LOGGER.info(String.format("Loading plugin class %s from %s", klazzName, pluginTitle));
-            final MindMapPlugin pluginInstance = (MindMapPlugin) loader.loadClass(klazzName).newInstance();
+            final MindMapPlugin pluginInstance =
+                (MindMapPlugin) loader.loadClass(klazzName).getConstructor().newInstance();
             MindMapPluginRegistry.getInstance().registerPlugin(pluginInstance);
           }
         } else {
-          LOGGER.warn(String.format("Plugin %s [%s] is not valid for API : %s", pluginTitle, pluginVersion, pluginApiVersion));
+          LOGGER.warn(
+              String.format("Plugin %s [%s] is not valid for API : %s", pluginTitle, pluginVersion,
+                  pluginApiVersion));
         }
       } catch (Exception ex) {
         LOGGER.error("Can't load plugin from : " + plugin.getAbsolutePath(), ex);
